--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ nltk==3.5
 pandas==1.3.5
 numpy==1.21.2
 jupyter==1.0.0
+
+Install Dependencies
+Open a terminal or command prompt and navigate to the root directory of your project. Run the following command to install the dependencies:
+pip install -r requirements.txt
